re PR tree-optimization/26865 (Segmentation fault with -std=c99 -O1 and alloca())

PR tree-optimization/26865
	* tree-ssa-structalias.c (find_func_aliases): Check that anyoffsetrhs
	type is pointer or array type.

	* gcc.dg/pr26865.c: New test.

From-SVN: r113243